# umock

./: CMakeLists.txt  README.md  build.py
cfake/cmake/: ufake.cmake
cfake/include/: umock.h
genbuild/: aaa.h  fake.h  fake.malloc.h  stdlib.h
include/: mylib.h
src/: CMakeLists.txt  main.c  mylib.c
test/: mylib.test.c
umock/cmake/: umock.cmake
umock/include/: umock.h
